# smart-portfolio-main/backend/internal/modules/admin/handler/admin_handler.go
@@ -5,14 +5,14 @@ import (
 	"net/http"
 	"time"
 
-	"github.com/ZRishu/smart-portfolio/internal/database"
-	"github.com/ZRishu/smart-portfolio/internal/httputil"
-	airepository "github.com/ZRishu/smart-portfolio/internal/modules/ai/repository"
-	"github.com/ZRishu/smart-portfolio/internal/modules/content/repository"
-	contentservice "github.com/ZRishu/smart-portfolio/internal/modules/content/service"
-	paymentdto "github.com/ZRishu/smart-portfolio/internal/modules/payment/dto"
-	paymentmodel "github.com/ZRishu/smart-portfolio/internal/modules/payment/model"
-	paymentrepository "github.com/ZRishu/smart-portfolio/internal/modules/payment/repository"
+	"github.com/morningstar004/smart-portfolio/internal/database"
+	"github.com/morningstar004/smart-portfolio/internal/httputil"
+	airepository "github.com/morningstar004/smart-portfolio/internal/modules/ai/repository"
+	"github.com/morningstar004/smart-portfolio/internal/modules/content/repository"
+	contentservice "github.com/morningstar004/smart-portfolio/internal/modules/content/service"
+	paymentdto "github.com/morningstar004/smart-portfolio/internal/modules/payment/dto"
+	paymentmodel "github.com/morningstar004/smart-portfolio/internal/modules/payment/model"
+	paymentrepository "github.com/morningstar004/smart-portfolio/internal/modules/payment/repository"
 	"github.com/go-chi/chi/v5"
 	"github.com/rs/zerolog/log"
 )
